--- a/frontend/src/components/History.css
+++ b/frontend/src/components/History.css
@@ -51,5 +51,17 @@
       opacity: 1;
     }
   }
+
+  .CenterAppbar {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .navbar-link {
+    padding: auto;
+    font-size: 19px;
+    text-decoration: none;
+    font-weight: bold;
+  }
   
   
